2025-XX-XX   3.3.2:
-------------------
  * fix off-by-one-error in check for length of count argument
    in `util.canonical_decode()`
  * simplify `util.int2ba()`
  * add tests
  * add [tricks example](../examples/tricks.py)


2025-04-04   3.3.1:
-------------------
  * remove `License` classifier in favor of a SPDX license expression, #231
  * reorganize and cleanup many tests


2025-03-30   3.3.0:
-------------------
  * add optional `group` and `sep` arguments' to `.to01()`, #230 -
    as well as `util.ba2hex()` and `util.ba2base()`
  * ignore whitespace in `util.base2ba()` and `util.hex2ba()`
  * check for embedded nul characters when extending (and initializing)
    bitarray from string
  * improve testing
  * add [double precision floating point number example](../examples/double.py)


2025-03-19   3.2.0:
-------------------
  * add `util.xor_indices()`, #229
  * add [Hamming code example](../examples/hamming.py)


2025-03-06   3.1.1:
-------------------
  * updated `pythoncapi_compat.h` for pypy3.11 support, see #227
  * use `__builtin_parityll()` when available in `util.parity()`
  * add `parity_64()` to header
  * simplify some tests
  * add [LFSR example](../examples/lfsr.py)


2025-02-19   3.1.0:
-------------------
  * allow mask assignment to bitarrays, see #225
  * add missing masked operations to pyi-file
  * refactor `resize()` and avoid overallocation when downsizing buffer
  * update `build_wheels.yml`
  * fix some typos
  * minor simplifications
  * rename `growth/` example to `resize/` and add tests for `resize()`
  * update gene example
  * add comments


2024-10-15   3.0.0:
-------------------
  * see [Bitarray 3 transition](bitarray3.rst)
  * remove Python 2.7 support
  * `.decode()` now returns iterator (equivalent to past `.iterdecode()`)
  * `.search()` now returns iterator (equivalent to past `.itersearch()`)
  * remove `.iterdecode()` and `.itersearch()`
  * remove `util.rindex()`, use `.index(..., right=1)` instead,